--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
-/* ALL CREDITS GO TO ERIC ZHANG --> https://www.ekzhang.com/ */
-/* ALSO W3SCHOOLS */
+/* ALL CREDITS GO TO ERIC ZHANG --> https://www.ekzhang.com/
+ALSO W3SCHOOLS 
+- walrus */
+
 
 body {
   background-color: #f9f9f9;
@@ -79,4 +81,17 @@ h2 {
 .scrolling {
 	max-height:250px;
 	overflow:scroll;
+}
+
+
+.insert {
+	box-sizing: border-box;
+	text-align: center;
+	align-items: center;
+	width: 50px;
+	height: 50px;
+	font-size: 24px;
+	padding: 10px;
+	border: 2px solid black;
+	line-height: 25px;
 }
